--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Hello, World!
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <title>JavaScript Window Resize Event</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+    <h1>Hello, JavaScript!</h1>
+    <script src="app.js"></script>
+</body>
+
+</html>
