--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>JavaScript Window Resize Event</title>
     <link rel="stylesheet" href="style.css">
 </head>
