--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="utf-8">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <title>Gremlin Page</title>
+    <title>Page Title</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-    <h1>Gremlin Page</h1>
+    <h1>Mr. S. Page.</h1>
     <script src="app.js"></script>
 </body>
 
